<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="e.adin_pc.spark.LoginActivity">

    <!-- Login progress -->

    <EditText
        android:id="@+id/Username_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name"/>


    <EditText
        android:id="@+id/Password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/LogIn_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_in" />

    <TextView
        android:id="@+id/Register_TextView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:paddingTop="20dp"
        android:text="@string/register"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/Skip_TextView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:paddingTop="20dp"
        android:text="@string/skip"
        android:textAlignment="center"/>

</LinearLayout>
