<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.adin_pc.spark.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/UserNameReg_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/PasswordReg_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:hint="@string/password"
           />

        <EditText
            android:id="@+id/EmailReg_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/adress"/>

        <EditText
            android:id="@+id/BirthdayReg_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="20dp"
            android:hint="@string/birthday"
            android:inputType="date" />


        <Button
            android:id="@+id/register_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"

            android:text="Complete registration " />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
